--- a/BackendApp/BackendApp/package.json
+++ b/BackendApp/BackendApp/package.json
@@ -13,17 +13,17 @@
     "express": "~4.13.1",
     "jade": "~1.11.0",
     "method-override": "^2.3.5",
+    "mocha": "^2.4.5",
     "mongodb": "~2.0.36",
     "mongoose": "^4.1.12",
-    "morgan": "~1.6.1",
-    "serve-favicon": "~2.3.0",
     "mongoose-unique-validator": "^0.6.2",
+    "morgan": "~1.6.1",
     "node-uuid": "^1.4.7",
-    "mocha": "^2.4.5"
+    "request": "^2.69.0",
+    "serve-favicon": "~2.3.0"
   },
-"devDependencies": {
-"chai": "^3.2.0",
-"chai-http": "^1.0.0"
+  "devDependencies": {
+    "chai": "^3.2.0",
+    "chai-http": "^1.0.0"
   }
 }
-
