3:53 AM -- mapa y lista funcionan

--- a/App/Canchas/app/src/main/AndroidManifest.xml
+++ b/App/Canchas/app/src/main/AndroidManifest.xml
@@ -2,6 +2,11 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="hackmty.canchas">
 
+
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+    <uses-permission android:name="android.permission.INTERNET"/>
+
     <!--
          The ACCESS_COARSE/FINE_LOCATION permissions are not required to use
          Google Maps Android API v2, but you must specify either coarse or fine
@@ -21,7 +26,6 @@
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -40,9 +44,16 @@
         <activity
             android:name=".Map"
             android:label="@string/title_activity_map">
+
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="hackmty.canchas.MainActivity" />
+
+            <intent-filter>
+                <action android:name="hackmty.canchas.MAP" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+
         </activity>
     </application>
 
