--- a/BackendApp/BackendApp/package.json
+++ b/BackendApp/BackendApp/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "async": "^1.5.2",
+    "bitpay": "^0.3.1",
     "bitpay-api": "0.0.2",
     "body-parser": "~1.13.2",
     "cookie-parser": "~1.3.5",
